--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -67,7 +67,10 @@
     const apiRootDomain = 'https://api.nodeauth.dev';
     async function logout() {
       try {
-        await fetch(`${apiRootDomain}/api/logout`, { method: 'POST' });
+        await fetch(`${apiRootDomain}/api/logout`, {
+          method: 'POST',
+          credentials: 'include',
+        });
       } catch (error) {
         console.error(error);
       }
